# ENG

./: .gitignore  Getting-Started.md  README.MD  env.json  example.eng  hello.eng  index.html  interpreter.py  log.txt  mathutils.eng  playground.html  pyproject.toml
docs/: download.html  getting-started.html  intro.html  playground.html  reference.html  syntax-conditionals.html  syntax-functions.html  syntax-io.html  syntax-loops.html  syntax-variables.html
docs/assets/: code-examples.json
docs/js/: search.js
eng/: interpreter.py
eng-vscode-extension/eng-programming-language/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
eng-vscode-extension/eng-programming-language/snippets/: eng.code-snippets
eng-vscode-extension/eng-programming-language/syntaxes/: eng.tmLanguage.json
eng-vscode-extension/eng-programming-language/themes/: Eng-Dark-color-theme.json  Eng-Light-color-theme.json
interpreter/: __init__.py  __main__.py  core.py  evaluator.py  main.py  runtime.py
